--- a/WiiApi/WiiApi/WiiApi.csproj
+++ b/WiiApi/WiiApi/WiiApi.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1046FB11-E062-4BB5-BCB9-E2C0791B3A8F}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -49,6 +49,7 @@
     <Compile Include="ParametriDogadjaja.cs" />
     <Compile Include="Reakcija.cs" />
     <Compile Include="Stanje.cs" />
+    <Compile Include="WiiEmulator.cs" />
     <Compile Include="WiiFabrika.cs" />
   </ItemGroup>
   <ItemGroup>
