--- a/trunk/HeadTracking2LEDs/HeadTracking2LEDs/HeadTracking2LEDs.csproj
+++ b/trunk/HeadTracking2LEDs/HeadTracking2LEDs/HeadTracking2LEDs.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>HeadTracking2LEDs</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <StartupObject>HeadTracking2LEDs.Pong</StartupObject>
+    <StartupObject>HeadTracking2LEDs.ScenaSoba</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,6 +45,13 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data.Entity">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -76,6 +83,12 @@
       <DependentUpon>Pong.cs</DependentUpon>
     </Compile>
     <Compile Include="GeometryUtil.cs" />
+    <Compile Include="ScenaSoba.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ScenaSoba.Designer.cs">
+      <DependentUpon>ScenaSoba.cs</DependentUpon>
+    </Compile>
     <Compile Include="WiiController.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
