--- a/trunk/HeadTracking2LEDs/HeadTracking2LEDs/HeadTracking2LEDs.csproj
+++ b/trunk/HeadTracking2LEDs/HeadTracking2LEDs/HeadTracking2LEDs.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>HeadTracking2LEDs</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <StartupObject>HeadTracking2LEDs.ScenaSoba</StartupObject>
+    <StartupObject>HeadTracking2LEDs.Pong</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
