--- a/WiiApi/WiiApi/WiiApi.csproj
+++ b/WiiApi/WiiApi/WiiApi.csproj
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1046FB11-E062-4BB5-BCB9-E2C0791B3A8F}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -43,6 +43,7 @@
   -->
   <ItemGroup>
     <Compile Include="Akcelerometar.cs" />
+    <Compile Include="SnimljenoStanje.cs" />
     <Compile Include="Dugmici.cs" />
     <Compile Include="ICSenzor.cs" />
     <Compile Include="Kontroler.cs" />
@@ -75,7 +76,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\gimii\prg\WiimotLib_1.7\WiimoteLib.dll</HintPath>
     </Reference>
-
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
