1. Prosiren Kontroler.cs sa UID podrskom kao i sa podrskom da ocita trenutno stanje.
2. Prosiren Emulator.cs sa gorenavedenim opcijama. 

3. Dodat WiiKontroler koji predstavlja implementacionu klasu za kontroler koja enkapsulira postojecu Wiimote klasu iz WiimoteLib.dll

--- a/WiiApi/WiiApi/WiiApi.csproj
+++ b/WiiApi/WiiApi/WiiApi.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Stanje.cs" />
     <Compile Include="Emulator.cs" />
     <Compile Include="WiiFabrika.cs" />
+    <Compile Include="WiiKontroler.cs" />
     <Compile Include="WiiMisAdapter.cs" />
     <Compile Include="WiiRekorderPolozaja.cs" />
   </ItemGroup>
