--- a/trunk/WiiApiTest/WiiApiTest/WiiApiTest.csproj
+++ b/trunk/WiiApiTest/WiiApiTest/WiiApiTest.csproj
@@ -48,16 +48,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="JedanKontrolerForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="JedanKontrolerForm.Designer.cs">
+      <DependentUpon>JedanKontrolerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="JedanKontrolerForm.resx">
+      <DependentUpon>JedanKontrolerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -66,6 +66,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="KontrolerInfo.resx">
       <DependentUpon>KontrolerInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViseKontroleraForm.resx">
+      <DependentUpon>ViseKontroleraForm.cs</DependentUpon>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -85,6 +88,12 @@
     </Compile>
     <Compile Include="KontrolerInfo.Designer.cs">
       <DependentUpon>KontrolerInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViseKontroleraForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViseKontroleraForm.Designer.cs">
+      <DependentUpon>ViseKontroleraForm.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
