--- a/trunk/WiiApi/WiiApi/WiiApi.csproj
+++ b/trunk/WiiApi/WiiApi/WiiApi.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1046FB11-E062-4BB5-BCB9-E2C0791B3A8F}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -24,6 +24,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Debug\WiiApi.XML</DocumentationFile>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -47,7 +48,7 @@
     <Compile Include="ICSenzor.cs" />
     <Compile Include="Kontroler.cs" />
     <Compile Include="ParametriDogadjaja.cs" />
-    <Compile Include="Polozaj2Diode.cs" />
+    <Compile Include="PolozajGlave.cs" />
     <Compile Include="Reakcija.cs" />
     <Compile Include="SnimljenoStanje.cs" />
     <Compile Include="Stanje.cs" />
