Implementiran deo api-ja za headtracking sa 2 i 3 izvora. Dodati primeri koji koriste api.

--- a/HeadTracking2LEDs/HeadTracking2LEDs/HeadTracking2LEDs.csproj
+++ b/HeadTracking2LEDs/HeadTracking2LEDs/HeadTracking2LEDs.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -99,6 +100,9 @@
     <Compile Include="WiiController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Primer1ZidLopta.resx">
+      <DependentUpon>Primer1ZidLopta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
