--- a/WiiApi/WiiApi/WiiApi.csproj
+++ b/WiiApi/WiiApi/WiiApi.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1046FB11-E062-4BB5-BCB9-E2C0791B3A8F}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -76,7 +76,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="WiimoteLib, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\prg\WiimotLib_1.7\WiimoteLib.dll</HintPath>
+      <HintPath>.\WiimoteLib.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
