--- a/trunk/TwoPaneDemo/TwoPaneDemo/TwoPaneDemo.csproj
+++ b/trunk/TwoPaneDemo/TwoPaneDemo/TwoPaneDemo.csproj
@@ -70,10 +70,19 @@
     <Compile Include="GLPrikaz.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Kalibracija.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kalibracija.Designer.cs">
+      <DependentUpon>Kalibracija.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kalibracija.resx">
+      <DependentUpon>Kalibracija.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -84,6 +93,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\Kalibracija.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
