Housekeeping, sa svrhom modularizacije Modelnawiigatora, ovaj ce zatem biti pretvoren u demonstracioni primer, dok ce navigator biti reimplementiran kao ModularMdelNawiigator koji ce se oslanjati na prosirenje WiiAPI-ja. Simple.

--- a/GimiiIntegrated/ModelNawiigator/ModelNawiigator.csproj
+++ b/GimiiIntegrated/ModelNawiigator/ModelNawiigator.csproj
@@ -88,7 +88,7 @@
     <Compile Include="BasicModel.cs" />
     <Compile Include="Calibrator\BasicModel.cs" />
     <Compile Include="Calibrator\Camera.cs" />
-    <Compile Include="Calibrator\CircularBuffer.cs" />
+    <Compile Include="Common\CircularBuffer.cs" />
     <Compile Include="Calibrator\Game1.cs" />
     <Compile Include="Calibrator\Grid.cs" />
     <Compile Include="Calibrator\MobileModel.cs" />
