--- a/GimiiIntegrated/ModelNawiigator/ModelNawiigator.csproj
+++ b/GimiiIntegrated/ModelNawiigator/ModelNawiigator.csproj
@@ -14,6 +14,8 @@
     <XnaCrossPlatformGroupID>66e543de-e2f9-45b0-938f-3fad8a0db819</XnaCrossPlatformGroupID>
     <ApplicationIcon>Game.ico</ApplicationIcon>
     <Thumbnail>GameThumbnail.png</Thumbnail>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <StartupObject>ModelNawiigator.Program</StartupObject>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -26,10 +28,8 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <StartupObject>ModelNawiigator.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -89,7 +89,7 @@
     <Compile Include="Calibrator\BasicModel.cs" />
     <Compile Include="Calibrator\Camera.cs" />
     <Compile Include="Common\CircularBuffer.cs" />
-    <Compile Include="Calibrator\Game1.cs" />
+    <Compile Include="Calibrator\CalibrationMain.cs" />
     <Compile Include="Calibrator\Grid.cs" />
     <Compile Include="Calibrator\MobileModel.cs" />
     <Compile Include="Calibrator\ModelManager.cs" />
@@ -99,10 +99,9 @@
     <Compile Include="PositionCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="NawiigatorMain.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Calibrator\Game.ico" />
     <Content Include="Calibrator\GameThumbnail.png" />
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
